---
source: crates/tribute-front/src/ast_to_ir/lower.rs
assertion_line: 4657
expression: "trunk_ir::printer::print_op(db, ir_module.as_operation())"
---
core.module @test {
  func.func @main(%x: core.i32) -> core.nil {
    %0 = adt.variant_is %x {tag = @Some, type = tribute_rt.any} : core.i1
    %1 = scf.if %0 : tribute_rt.any {
      %2 = adt.variant_cast %x {tag = @Some, type = tribute_rt.any} : tribute_rt.any
      %3 = adt.variant_get %2 {field = 0} : tribute_rt.any
      scf.yield %3
    } {
      %4 = adt.variant_is %x {tag = @None, type = tribute_rt.any} : core.i1
      %5 = scf.if %4 : tribute_rt.any {
        %6 = adt.variant_cast %x {tag = @None, type = tribute_rt.any} : tribute_rt.any
        %7 = arith.const {value = 0} : core.i32
        %8 = core.unrealized_conversion_cast %7 : tribute_rt.any
        scf.yield %8
      } {
        %9 = arith.const {value = unit} : core.nil
        %10 = core.unrealized_conversion_cast %9 : tribute_rt.any
        scf.yield %10
      }
      scf.yield %5
    }
    func.return %1
  }
}
